CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(vk-tests)


IF(WIN32)
ADD_DEFINITIONS(-D__WIN32__)
ELSEIF(UNIX)
ADD_DEFINITIONS(-D__UNIX__)
ELSEIF(APPLE)
ADD_DEFINITIONS(-D__APPLE__)
ENDIF()

FILE(GLOB SRC *.cc)
FILE(GLOB HEAD *.h)

INCLUDE(FindVulkan.cmake)

INCLUDE_DIRECTORIES(${VULKAN_INCLUDE_DIR})

ADD_EXECUTABLE(vk-tests ${SRC} ${HEAD})
TARGET_LINK_LIBRARIES(vk-tests ${VULKAN_LIBRARY})